syntax = "proto3";

option java_multiple_files = true;
option java_package = "<%= packageName %>.grpc";

import "google/protobuf/empty.proto";

package <%= packageName %>;

service EnvironmentService {
    rpc GetEnv(google.protobuf.Empty) returns (Environment);
}

message Environment {
    repeated string activeProfiles = 1;
    repeated PropertySource propertySources = 2;
}

message PropertySource {
    string name = 1;
    map<string, PropertyValue> properties = 2;
}

message PropertyValue {
    string origin = 1;
    string value = 2;
}
