syntax = "proto3";

option java_multiple_files = true;
option java_package = "<%= packageName %>.grpc";

import "google/protobuf/empty.proto";

package <%= packageName %>;

service InfoService {
    rpc GetInfo(google.protobuf.Empty) returns (Info);
}

message Info {
    map<string, string> details = 1;
}
